--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/nodemailer": "^6.4.17",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
